# drag-evaluation

./: .flake8  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  flow_computation.py  flow_postprocess.py  pyproject.toml  solvers.py  utils.py
.github/workflows/: check_formatting.yml
docker/: Dockerfile
src/drag_evaluation/: __init__.py  mesh_generation.py  solvers.py  utils.py
